--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "pin-cell"
-version = "0.1.0"
+version = "0.1.1"
+repository = "https://github.com/withoutboats/pin-cell"
+documentation = "https://docs.rs/pin-cell"
 authors = ["Without Boats <boats@mozilla.com>"]
 license = "MIT"
 description = "A pin-safe cell"
