--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "pin-cell"
 version = "0.1.1"
-repository = "https://github.com/withoutboats/pin-cell"
+repository = "https://github.com/dignifiedquire/pin-cell"
 documentation = "https://docs.rs/pin-cell"
-authors = ["Without Boats <boats@mozilla.com>"]
+authors = ["Without Boats <boats@mozilla.com>", "dignifiedquire <me@dignifiedquire.com>"]
 license = "MIT"
 description = "A pin-safe cell"
 
