--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,13 @@ name = "pin-cell"
 version = "0.1.1"
 repository = "https://github.com/dignifiedquire/pin-cell"
 documentation = "https://docs.rs/pin-cell"
-authors = ["Without Boats <boats@mozilla.com>", "dignifiedquire <me@dignifiedquire.com>"]
+authors = [
+  "Without Boats <boats@mozilla.com>",
+  "dignifiedquire <me@dignifiedquire.com>"
+]
 license = "MIT"
 description = "A pin-safe cell"
+readme = "README.md"
+edition = "2018"
 
 [dependencies]
